<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/destination_home">

    <fragment
        android:id="@+id/destination_home"
        android:name="pl.michallysak.weider6.ui.main.HomeFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_destination_home_to_destination_summary"
            app:destination="@id/destination_summary"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_destination_home_to_destination_settings"
            app:destination="@id/destination_settings"
            app:launchSingleTop="true"/>
        <action
            android:id="@+id/action_destination_home_to_destination_how_to"
            app:destination="@id/destination_how_to"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/destination_summary"
        android:name="pl.michallysak.weider6.ui.main.SummaryFragment"
        android:label="@string/summary"
        tools:layout="@layout/fragment_summary" />
    <fragment
        android:id="@+id/destination_how_to"
        android:name="pl.michallysak.weider6.ui.main.HowToFragment"
        android:label="@string/how_to"
        tools:layout="@layout/fragment_how_to" />
    <fragment
        android:id="@+id/destination_settings"
        android:name="pl.michallysak.weider6.ui.main.SettingsFragment"
        android:label="@string/settings"/>

</navigation>